Corrected styling on nav buttons on blog page; applied letter-spacing and margins to error page

--- a/themes/danielfox-theme/sass/_404.scss
+++ b/themes/danielfox-theme/sass/_404.scss
@@ -1,8 +1,10 @@
 .error404 {
     .site-content {
         margin: 0 5.07%;
+        margin-top: 5.07%;
         h2 {
             margin-bottom: 10px;
+            letter-spacing: 1px;
         }
         p {
             margin-top: 0;
